--- a/PetMate/src/components/JanelaModal.css
+++ b/PetMate/src/components/JanelaModal.css
@@ -297,3 +297,161 @@
       transform: translate(-50%, -60%);
     }
   }
+
+  @media (max-width: 768px) {
+    .conteiner_modal {
+        width: 90vw;
+        padding: 15px;
+    }
+
+
+
+
+    .modal_conteiner {
+        padding: 10px;
+    }
+
+
+
+
+    .conteiner_modal input,
+    .conteiner_modal select {
+        width: 100%;
+        font-size: 16px;
+    }
+
+
+
+
+    .botao_modal {
+        width: 40px;
+        height: 40px;
+        font-size: 24px;
+    }
+
+
+
+
+    .titulo-cad-pet {
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 10px;
+    }
+
+
+
+
+    .inputs-pet {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+
+
+
+    .descricao-pet-cad input {
+        width: 100%;
+        font-size: 16px;
+    }
+
+
+
+
+    .botao-cad-pet {
+        width: 100%;
+        font-size: 20px;
+    }
+}
+
+
+
+
+/* Para telas menores que 480px (celulares pequenos) */
+@media (max-width: 480px) {
+    .conteiner_modal {
+        width: 85vw;
+        padding: 10px;
+    }
+
+
+
+
+    .titulo-cad-pet h2 {
+        font-size: 19px;
+        margin-left: 10px;
+    }
+
+
+
+
+    .titulo-barra-pet img {
+        width: 210px;
+        margin-left: 10px;
+    }
+
+
+
+
+    .linha-inpt{
+        flex-direction: column;
+        gap: 0px;
+    }
+
+
+
+
+    #slectGenero{
+        width: 120%;
+        height: 40px;
+    }
+
+
+
+
+    .conteiner_modal input,
+    .conteiner_modal select {
+        font-size: 14px;
+        height: 40px;
+        width: 150%;
+        margin-left: -40px;
+    }
+
+
+
+
+    .botao_modal {
+        width: 35px;
+        height: 35px;
+        font-size: 20px;
+    }
+
+
+
+
+    .descricao-pet-cad input {
+        font-size: 14px;
+        height: 55px;
+    }
+
+
+
+
+    .botao-cad-pet {
+        font-size: 18px;
+        height: 50px;
+        width: 55%;
+    }
+
+
+    #selectGeneroCad{
+        width: 150%;
+        height: 40px;
+        margin-left: -40px;
+    }
+
+
+    .conteiner_modal label, .conteiner_modal input, .conteiner_modal select{
+        font-size: 16px;
+        margin-left: -40px;
+    }
+}
