--- a/PetMate/src/components/JanelaOng.css
+++ b/PetMate/src/components/JanelaOng.css
@@ -198,34 +198,148 @@
 
 @media (max-width: 768px) {
     .container-janela-ong {
-        width: 95%; 
+        width: 95%;
         padding: 15px;
-        height: 60%;
+        height: 80%;
     }
+
 
     .titulo-ong-modal {
-        font-size: 1.2em; 
+        font-size: 1.2em;
     }
 
+
     .logo-ong {
-        width: 10em; 
+        width: 10em;
         height: 10em;
     }
 
+
     .dados-ong {
+        height: 50%;
+        margin-top: -20px;
         padding: 8px;
         gap: 8px;
+    }
+
+
+    .telefone-ong h3,
+    .telefone-denuncia h3,
+    .descricao-ong h3 {
+        font-size: 1em;
+    }
+
+
+    .telefone-ong p,
+    .telefone-denuncia p,
+    .descricao-ong p {
+        font-size: 0.9em;
+    }
+
+
+    .contato-ong, .redesSociais-ong {
+        margin-left: -50px;
+        gap: 10px;
+    }
+
+
+     .redesSociais-ong h3{
+        margin-top: -10px;
+        font-size: 1.2em;
+        gap: 20px;
+    }
+
+
+    .contato-ong h3{
+        font-size: 1.2em;
+    }
+
+
+    .dados-ong p{
+        font-size: 0.8em;
+        margin-left: 10px;
+    }
+
+
+    .redesSociais-ong h3 {
+        margin-left: 70px;
+    }
+
+
+    .dados-ong strong{
+        font-size: 12px;
+    }
+
+
+    .iconeInsta{
+        margin-left: 20px;
+    }
+   
+    .botao-fechar-ong{
+        font-size: 20px;
+        width: 40px;
+        height: 40px;
+        padding: 5px;
+    }
+
+    .icone-wpp-ong, .icone-email-ong, .icone-mapa-ong{
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .container-janela-ong {
+        width: 95%;
+        padding: 10px;
+        height: 90%;
+    }
+
+    .titulo-ong-modal {
+        font-size: 1.2em;
+    }
+
+    .logo-ong {
+        width: 8em;
+        height: 8em;
+    }
+
+    .dados-ong {
+        height: 67%;
+        margin-top: -20px;
+        padding: 8px;
+        gap: 8px;
+    }
+
+    .dados-ong p{
+        font-size: 12px;
     }
 
     .telefone-ong h3,
     .telefone-denuncia h3,
     .descricao-ong h3 {
-        font-size: 1em; 
+        font-size: 1em;
     }
 
     .telefone-ong p,
     .telefone-denuncia p,
     .descricao-ong p {
         font-size: 0.9em;
+    }
+
+    .iconeInsta{
+        font-size: 20px;
+    }
+
+    .ctt-ong{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .redesSociais-ong a{
+        flex-direction: column;
+        align-items: center;
+        gap: 0px;
+        margin-left: 39px;
+        margin-top: -9px;
     }
 }
