--- a/PetMate/src/components/ModalLogout.css
+++ b/PetMate/src/components/ModalLogout.css
@@ -1,4 +1,4 @@
-.modal-logout{
+.modal-logout {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -11,7 +11,8 @@
     align-items: center;
     z-index: 1000;
 }
-.conteiner-modal-logout{
+
+.conteiner-modal-logout {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,14 +40,14 @@
     margin-bottom: 20px;
 }
 
-.botoes-logout{
+.botoes-logout {
     display: flex;
     justify-content: center;
     gap: 10px;
 }
 
 .botao-modal-logout,
-.botao-cancelar-logout{
+.botao-cancelar-logout {
     font-size: 1rem;
     border: none;
     cursor: pointer;
@@ -58,15 +59,17 @@
 }
 
 
-.botao-cancelar-logout{
+.botao-cancelar-logout {
     background-color: #84644D;
     color: #EBE5E0;
 }
-.botao-modal-logout{
+
+.botao-modal-logout {
     background-color: #EBE5E0;
     border: 1px solid #6b4f3a;
     color: #333;
 }
+
 .botao-modal-logout:hover {
     background-color: #b3aba5;
     transition: 0.3s;
@@ -74,4 +77,64 @@
 
 .botao-cancelar-logout:hover {
     background-color: #6e533f;
+}
+
+@media (max-width: 768px) {
+    .conteiner-modal-logout {
+        width: 80vw;
+        min-height: 40vh;
+        padding: 20px;
+    }
+
+
+
+
+    .texto_logout h1 {
+        font-size: 22px;
+    }
+
+
+
+
+    .botao-modal-logout,
+    .botao-cancelar-logout {
+        width: 120px;
+        height: 45px;
+        font-size: 16px;
+    }
+}
+
+
+
+
+@media (max-width: 480px) {
+    .conteiner-modal-logout {
+        width: 90vw;
+        min-height: 10vh;
+    }
+
+
+
+
+    .texto_logout h1 {
+        font-size: 19px;
+        margin-top: 20px;
+    }
+
+
+
+
+    .botoes-logout {
+        width: 120%;
+    }
+
+
+
+
+    .botao-modal-logout,
+    .botao-cancelar-logout {
+        width: 100%;
+        height: 40px;
+        font-size: 14px;
+    }
 }
