--- a/PetMate/src/components/loginOng.css
+++ b/PetMate/src/components/loginOng.css
@@ -360,30 +360,58 @@
 
 
 
-@media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     .container-login {
         flex-direction: column;
     }
 
+
     .img_cachorro {
         height: 300px;
+        margin-top: 140px;
     }
+
 
     .info-login {
         width: 80%;
         padding: 20px;
     }
 
+
     .inpts-login input {
-        width: 90%;
+        width: 100%;
     }
+
+
+    #inputSenha{
+        width: 100%;
+    }
+
 
     .texto-login h2 {
         font-size: 32px;
     }
 
-    .texto-login p, .base-login button, .sem-cadastro a {
+
+    .base-login button {
         font-size: 18px;
+        width: 120%;
+        margin-left: 25px;
+        margin-top: -30px;
+    }
+
+
+    .sem-cadastro {
+        flex-direction: column;
+        margin-left: 30px;
+        font-size: 16px;
+    }
+
+
+    .erro-mensagem-login{
+        margin-left: 15px;
+        margin-top: -60px;
+        margin-bottom: 50px;
     }
 
 
