--- a/PetMate/src/components/ModalConfirmFoto.css
+++ b/PetMate/src/components/ModalConfirmFoto.css
@@ -19,12 +19,11 @@
     align-items: center;
     background: #ffffff;
     /* padding: 30px;  */
-    border-radius: 10px; 
+    border-radius: 10px;
     text-align: center;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    width: 500px; 
+    width: 500px;
     height: 240px;
-    border: 2px solid #6b4f3a;
 }
 
 .modal-content h3 {
@@ -42,33 +41,37 @@
 .modal-buttons {
     display: flex;
     justify-content: center;
-    gap: 15px; 
+    gap: 15px;
     margin-top: 10px;
 }
 
 .modal-button {
-    padding: 10px 25px;
+    font-size: 1rem;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 5px;
+    height: 50px;
+    width: 120px;
+    font-family: nunito;
+    transition: 0.3s ease;
 }
 
 .modal-button.confirm {
-    background: #EBE5E0;
-    color: #333;
+    background-color: #EBE5E0;
     border: 1px solid #6b4f3a;
-
+    color: #333;
+}
+.modal-button.confirm:hover {
+    background-color: #b3aba5;
+    transition: 0.3s;
 }
 
-
 .modal-button.cancel {
-    background: #6b4f3a;
+    background-color: #84644D;
     color: white;
 }
 
 .modal-button.cancel:hover {
-    background: #976f50;
+    background-color: #6e533f;
+
 }
