--- a/PetMate/src/pages/Perfil.css
+++ b/PetMate/src/pages/Perfil.css
@@ -39,15 +39,6 @@
     font-weight: 400;
 }
 
-.user-icon-container {
-    display: flex;
-    width: 100%;
-    height: 15%;
-    margin: 0 auto;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
 
 .user-icon-perfil {
     font-size: 80px;
@@ -62,7 +53,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    position: relative; 
+    position: relative;
 }
 
 .icon-trash-container {
@@ -113,9 +104,10 @@
     justify-content: center;
     /* align-items: center; */
     height: auto;
-    gap: 60px;
-    margin-top: -10px;
-
+    width: 100%;
+    /* gap: 60px; */
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .inputs-perfil input, .inputs-perfil select {
@@ -123,10 +115,11 @@
     border: solid #AD947E 1px;
     box-shadow: 0px 0px 1px;
     background-color: #FBFBFB;
-    margin-bottom: 3vh;
+    margin-bottom: 1vh;
     outline: none;
     padding: 10px;
     font: 18px Roboto;
+    max-width: ;
 }
 
 .input-edit input {
@@ -139,6 +132,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 
 
@@ -156,38 +150,7 @@
     gap: 5px;
 }
 
-.botao-salvar-perfil {
-    width: 240px;
-    height: 55px;;
-    font-size: 20px;
-    background-color: #84644D;
-    border-radius: 12px;
-    border: none;
-    color: #F6F4F1;
-    font-weight: 600;
-    letter-spacing: 0.025em;
-    font-family: Roboto;
-    margin-top: 30px;
-    margin: auto;
-    cursor: pointer;
-}
 
-.botao-editar-perfil {
-    width: 240px;
-    height: 55px;
-    font-size: 20px;
-    background-color: #84644D;
-    border-radius: 12px;
-    border: none;
-    color: #F6F4F1;
-    font-weight: 600;
-    letter-spacing: 0.025em;
-    font-family: Roboto;
-    margin-top: 30px;
-    margin: auto;
-    cursor: pointer;
-
-}
 
 .botao-sair-logout {
     width: 100%;
@@ -215,58 +178,54 @@
     font-size: 40px;
 }
 
-.excluir-conta {
-    background-color: #F6F4F1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* width: 50%; */
-    border-radius: 10px;
-    border: solid 2px #84644D;
-    padding: 15px;
-    margin: auto;
-    gap: 10px;
-}
-.editar-conta {
-    background-color: #F6F4F1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    border: solid 2px #84644D;
-    padding: 15px;
-    margin: auto;
-    gap: 10px;
-    height: 132px;
-    width: 40%;
-}
-.editar-conta h4 {
-    font-size: 28px;
-    color: #484848;
-    text-align: center;
-}
-
-.excluir-conta h4 {
-    font-size: 28px;
-    color: #484848;
-    text-align: center;
-}
 .botoes-perfil{
+    background-color: #F6F4F1;
     display: flex;
-    height: auto;
     flex-direction: row;
     justify-content: center;
-    /* margin-top: 50px; */
     align-items: center;
+    border-radius: 10px;
+    gap: 160px;
+    margin-top: 20px;
+
   }
 
+  .botao-salvar-perfil {
+    width: 240px;
+    height: 55px;;
+    font-size: 20px;
+    background-color: #84644D;
+    border-radius: 12px;
+    border: none;
+    color: #F6F4F1;
+    font-weight: 600;
+    letter-spacing: 0.025em;
+    font-family: Roboto;
+    /* margin-top: 30px; */
+    margin: auto;
+    cursor: pointer;
+}
 
+.botao-editar-perfil {
+    width: 240px;
+    height: 55px;
+    font-size: 20px;
+    background-color: #84644D;
+    border-radius: 12px;
+    border: none;
+    color: #F6F4F1;
+    font-weight: 600;
+    letter-spacing: 0.025em;
+    font-family: Roboto;
+    margin-top: 30px;
+    margin: auto;
+    cursor: pointer;
+
+}
 
 .botao-excluir-perfil {
     height: 50px;
-    width: 150px;
+    min-width: 150px;
     background-color: #EBE5E0;
     border: 2px solid #84644D;
     border-radius: 10px;
@@ -275,8 +234,10 @@
     font-family: 'Nunito';
     font-weight: 700;
     letter-spacing: 0.03em;
+    padding: 0px 25px 0px 25px;
     /* margin-top: 10px; */
 }
+
 
 .input-edit {
     display: flex;
@@ -317,11 +278,14 @@
 }
 
 .inputs-perfil input {
-    width: 440px;
+    width: 100%;
     height: 55px;
 }
+.input-editavel {
+    width: 100%;
+}
 
-.input-nome input, .input-edit select {
+.input-editavel input, .input-edit select {
     width: 440px;
     height: 55px;
     
@@ -347,6 +311,34 @@
     cursor: pointer;
     color: #84644D;
 }
+
+#inpt-senha-perfil {
+    /* min-width: 440px; */
+    max-width: 440px;
+}
+
+.mostrar-senha{
+    display: flex;
+    align-items: center;
+    position: relative;
+    
+}
+
+.icon-mostrar-senha-perfil-user{
+    height: 55px;
+    width: 40px;
+    background-color: #FBFBFB;
+    border: 1px solid #AD947E;
+    border-left: none;
+    border-right: none;
+    font-size: 25px;
+    padding-right: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
 
 .success-popup-perfil {
     position: fixed;
