--- a/PetMate/src/pages/Perfil.css
+++ b/PetMate/src/pages/Perfil.css
@@ -86,7 +86,7 @@
 }
 .info-perfil p {
     font-size: 20px;
-    margin-bottom: 8px;
+    /* margin-bottom: 8px; */
 
 }
 
@@ -102,12 +102,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* align-items: center; */
-    height: auto;
-    width: 100%;
-    /* gap: 60px; */
     margin-top: 5px;
-    margin-bottom: 10px;
+    gap: 10px;
+    /* align-items: center; */
+    /* height: auto; */
+    /* width: 100%; */
+    /* gap: 60px; */
+    /* margin-bottom: 10px; */
 }
 
 .inputs-perfil input, .inputs-perfil select {
@@ -119,22 +120,80 @@
     outline: none;
     padding: 10px;
     font: 18px Roboto;
-    max-width: ;
+    /* max-width: ; */
 }
 
-.input-edit input {
-    height: 60px;
 
+.input-edit{
+    width: 100%;
 }
+
 
 .inputs-perfil-1,
 .inputs-perfil-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     flex: 1;
+} 
+.dadoPerma {
+    color: #84644D;
 }
 
+.inputs-perfil input, .inputs-perfil select {
+    width: 100%;
+    height: 55px;
+}
+
+.input-perma-lock{
+    display: flex;
+    flex-direction: row;
+}
+
+.input-perma input {
+    border-radius: 6px;
+    border-right: none;
+    border-radius: 6px 0px 0px 6px;
+}
+
+.inputs-perfil p {
+    font-size: 22px;
+}
+
+.input-edit .icon-lock {
+    cursor: pointer;
+    color: #84644D;
+}
+.input-edit {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.input-edit input, .input-edit select{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-radius: 6px 0px 0px 6px;
+    border-color: #AD947E #ffffff00 #AD947E #AD947E;
+    border-right: none;
+    outline: none;
+}
+
+.uf-perfil-user:disabled {
+    border-color: #9e7458 #ffffff00 #9e7458 #9e7458;
+    color: #000;
+}
+
+.icon-lock {
+    display: flex;
+    height: 55px;
+    border: solid #AD947E 1px;
+    border-radius: 0px 6px 6px 0px;
+    border-color: #AD947E #AD947E #AD947E #ffffff00;
+    border-left: none;
+    background-color: #FBFBFB;
+    font-size: 25px;
+    color: #747373;
+    padding-right: 4px;
+}
 
 
 .dadoPerma {
@@ -149,8 +208,6 @@
     align-items: center;
     gap: 5px;
 }
-
-
 
 .botao-sair-logout {
     width: 100%;
@@ -239,83 +296,9 @@
 }
 
 
-.input-edit {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.input-edit input, .input-edit select{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 50px;
-    border-radius: 6px 0px 0px 6px;
-    border-color: #AD947E #ffffff00 #AD947E #AD947E;
-    border-right: none;
-    outline: none;
-}
-.uf-perfil-user:disabled {
-    border-color: #9e7458 #ffffff00 #9e7458 #9e7458;
-    color: #000;
-}
-
-.icon-lock {
-    display: flex;
-    height: 55px;
-    border: solid #AD947E 1px;
-    border-radius: 0px 6px 6px 0px;
-    border-color: #AD947E #AD947E #AD947E #ffffff00;
-    border-left: none;
-    background-color: #FBFBFB;
-    font-size: 25px;
-    color: #747373;
-    padding-right: 4px;
-}
-
-.dadoPerma {
-    color: #84644D;
-}
-
-.inputs-perfil input {
-    width: 100%;
-    height: 55px;
-}
-.input-editavel {
-    width: 100%;
-}
-
-.input-editavel input, .input-edit select {
-    width: 440px;
-    height: 55px;
-    
-}
-.input-perma-lock{
-    display: flex;
-    flex-direction: row;
-}
-
-.input-perma input {
-    width: 440px;
-    border-radius: 6px;
-    border-right: none;
-    border-radius: 6px 0px 0px 6px;
-}
 
 
-.inputs-perfil p {
-    font-size: 22px;
-}
 
-.input-edit .icon-lock {
-    cursor: pointer;
-    color: #84644D;
-}
-
-#inpt-senha-perfil {
-    /* min-width: 440px; */
-    max-width: 440px;
-}
 
 .mostrar-senha{
     display: flex;
