--- a/PetMate/src/components/CadastroONG.css
+++ b/PetMate/src/components/CadastroONG.css
@@ -36,7 +36,7 @@
     flex-direction: row;
     align-items: center;
     margin-left: 1%;
-    margin-bottom: -45px;
+    margin-bottom: -75px;
     /* border: solid; */
 }
 
@@ -276,11 +276,20 @@
 }
 
 .erro-mensagem {
-    color: rgb(219, 16, 16);
-    font-size: 14px;
-    margin-top: 1px;
-    margin-bottom: 2px;
+    color: rgb(196, 25, 25);
+    text-align: start;
+    font-size: 12px;
+    margin-right: 40px;
+    /* margin-top: 5px; */
 }
+.erro-mensagem-foto {
+    color: rgb(196, 25, 25);
+    text-align: center;
+    font-size: 12px;
+    /* margin-right: 40px; */
+    margin-top: -5px;
+}
+
 
 .termos-ong a {
     font-size: 16px;
