--- a/PetMate/src/components/LoginUsuario.css
+++ b/PetMate/src/components/LoginUsuario.css
@@ -116,7 +116,7 @@
 
 .inputs-login p{
     font-family: inter;
-    font-size: 18px;
+    /* font-size: 18px; */
 }
 
 .inpt-p{
@@ -278,13 +278,11 @@
 
 
 .erro-mensagem-login{
-    color: rgb(219, 16, 16);;
+    color: rgb(196, 25, 25);
     text-align: center;
-    font-size: 20px;
-    /* border: solid; */
-    margin-left: 70px;
-    margin-top: -70px;
-    margin-bottom: 90px;
+    font-size: 10px;
+    margin-bottom: -5px;
+    margin-top: 5px;
 }
 
 /* radio */
