--- a/PetMate/src/components/ModalExcluirOng.css
+++ b/PetMate/src/components/ModalExcluirOng.css
@@ -1,44 +1,47 @@
-.modal-excluir-ong{
+.modal-excluir-ong {
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
-    backdrop-filter: blur(2px);
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
 }
-.container-excluir-ong{
+
+.container-excluir-ong {
+    background-color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: auto;
-    min-height: 40vh;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    width: 36vw;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    border-radius: 8px;
     padding: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+    width: 600px;
+    height: 300px;
+    max-width: 90%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
+.botoes-excluir-ong {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 10px;
+}
 
 .botao-modal-excluir-ong, .botao-modal-cancelar-ong {
-    font-size: 18px;
-    font-weight: 600;
-    padding: 10px 20px;
-    margin-left: 10px;
-    margin-top: 20px;
+    font-size: 1rem;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    height: 60px;
-    width: 150px;
-    transition: background-color 0.3s ease;
+    height: 50px;
+    width: 120px;
+    font-family: nunito;
+    transition: 0.3s ease;
 }
 
 .botao-modal-cancelar-ong{
@@ -50,25 +53,25 @@
     border: 1px solid #6b4f3a;
     color: #333;
 }
-
-.botao-modal-cancelar-ong:hover {
-    background-color: #a67c5b;
+.botao-modal-excluir-ong:hover {
+    background-color: #b3aba5;
+    transition: 0.3s;
 }
 
+.botao-modal-cancelar-ong:hover {
+    background-color: #6e533f;
+}
 
-.Botao_Exclui{
+.botoes-excluir-ong{
     margin-top: 20px;
     margin-right: 20px;
     padding: 10px;
 }
 
-.Botao_Exclui button{
+.botoes-excluir-ong button{
     padding: 10px;
 }
 
-.texto-excluir-ong{
-    margin-top: 80px;
-}
 .texto-excluir-ong h1 {
     font-size: 30px;
     color: #333;
