--- a/PetMate/src/pages/Cadastro.css
+++ b/PetMate/src/pages/Cadastro.css
@@ -501,10 +501,11 @@
 }
 
 .erro-termos {
-    color: rgb(219, 16, 16);
+    color: rgb(196, 25, 25);
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     margin-right: 40px;
+    margin-bottom: -5px;
 }
 
 .erro-senha {
@@ -517,9 +518,9 @@
 
 
 .erro-input-user {
-    color: rgb(219, 16, 16);
-    text-align: center;
-    font-size: 14px;
-    margin-right: 40px;
+    color: rgb(196, 25, 25);
+    text-align: start;
+    font-size: 12px;
+    margin-bottom: -5px;
     margin-top: 5px;
 }
